
2018-02-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c [!COB_DEBUG_LOG]: adjusted handling of COB_DEBUG_LOG to
	  minimize active code while still raise a warning (instead of an
	  error) for fixing compiler warnings

2018-01-23  Ron Norman <rjn@inglenet.com>

	* termio.c: Standardize display of -NaN and NaN for float/double

2018-01-23  Ron Norman <rjn@inglenet.com>

	* numeric.c: Improved check for 'isinf' with replacement

2018-01-23  Ron Norman <rjn@inglenet.com>

	* numeric.c: SUN Solaris may not have 'isinf'

2018-01-03 Ron Norman <rjn@inglenet.com>

	* common.c,common.h: Add cob_function_return routine to
	  copy a FUNCTION's RETURNING cob_field to 'cob_module' 
	  save area and return address of that

2018-01-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* numeric.c [WIN32]: fix missing definition of isnan / isinf

2017-12-31  Ron Norman <rjn@inglenet.com>

	* fileio.c: If file ASSIGN is empty use SELECT name
	            BDB fix to allocation record area for max record size
	* common.c: flush stderr/stdout to get display output before dump

2017-12-26  Ron Norman <rjn@inglenet.com>

	* numeric.c: Additional fix for COMP-2 to check of overflow and
	             set SIZE ERROR condition when requested

2017-12-26  Ron Norman <rjn@inglenet.com>

	* numeric.c: Fix for COMP-1 to check of overflow and
	             set SIZE ERROR condition when requested

2017-12-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_trace_file): FR #242 allow trace file to be
	  appended by starting COB_TRACE_FILE with "+"

2017-12-22  Ron Norman <rjn@inglenet.com>

	* numeric.c: More fixes for FLOAT-DECIMAL-16/34 data types
	             It should now be setting SIZE ERROR condition

2017-12-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, termio.c, coblocal.h: renamed setting COBPRINTER to
	  COB_DISPLAY_PRINT_PIPE (with keeping an alias of COBPRINTER) and