@@ -147,9 +147,6 @@ static const cob_field_attr	const_alpha_attr =
 				{COB_TYPE_ALPHANUMERIC, 0, 0, 0, NULL};
 
 static char			*cob_local_env = NULL;
-#ifdef COB_DEBUG_LOG
-static int			cob_debug_log_time = 0;
-#endif
 static int			current_arg = 0;
 static unsigned char		*commlnptr = NULL;
 static size_t			commlncnt = 0;
@@ -167,8 +164,9 @@ static const char		*cob_current_paragraph = NULL;
 static const char		*cob_source_file = NULL;
 static const char		*cob_source_statement = NULL;
 static unsigned int		cob_source_line = 0;
+
 #ifdef COB_DEBUG_LOG
-static const char		*cob_debug_env = NULL;
+static int			cob_debug_log_time = 0;
 static FILE			*cob_debug_file = NULL;
 static int			cob_debug_level = 9;
 static char			*cob_debug_mod = NULL;
@@ -354,6 +352,9 @@ static struct config_tbl gc_conf[] = {
 #define FUNC_NAME_IN_DEFAULT NUM_CONFIG + 1
 
 /* Local functions */
+#ifdef COB_DEBUG_LOG
+static void		cob_debug_open	(void);
+#endif
 void		conf_runtime_error_value	(const char *value, const int conf_pos);
 void		conf_runtime_error	(const int finish_error, const char *fmt, ...);
 static int		set_config_val	(char *value, int pos);
@@ -509,32 +510,46 @@ cob_terminate_routines (void)
 		return;
 	}
 
+	if (cobsetptr->cob_dump_file == cobsetptr->cob_trace_file
+	 || cobsetptr->cob_dump_file == stderr) {
+		cobsetptr->cob_dump_file = NULL;
+	}
+
+	if (cobsetptr->cob_dump_file) {
+		fclose (cobsetptr->cob_dump_file);
+		cobsetptr->cob_dump_file = NULL;
+	}
+
 #ifdef COB_DEBUG_LOG
+	/* close debug log (delete file if empty) */
 	if (cob_debug_file
-	&& !cobsetptr->external_trace_file
-	&& cob_debug_file != cobsetptr->cob_trace_file) {
-		if(cob_debug_file_name != NULL
-		&& ftell(cob_debug_file) == 0) {
+	 && cob_debug_file != stderr) {
+		/* note: cob_debug_file can only be identical to cob_trace_file
+		         if same file name was used, not with external_trace_file */
+		if (cob_debug_file == cobsetptr->cob_trace_file) {
+			cobsetptr->cob_trace_file = NULL;
+		}
+		if (cob_debug_file_name != NULL
+		&& ftell (cob_debug_file) == 0) {
 			fclose (cob_debug_file);
-			unlink(cob_debug_file_name);
-			cob_debug_file_name = NULL;
+			unlink (cob_debug_file_name);
 		} else {
 			fclose (cob_debug_file);
 		}
 	}
 	cob_debug_file = NULL;
+	if (cob_debug_file_name) {
+		cob_free (cob_debug_file_name);
+		cob_debug_file_name = NULL;
+	}
 #endif
 
-	if (cobsetptr->cob_dump_file == cobsetptr->cob_trace_file
-	 || cobsetptr->cob_dump_file == stderr)
-		cobsetptr->cob_dump_file = NULL;
-
-	if (cobsetptr->cob_trace_file 
-	&& !cobsetptr->external_trace_file
-	&& cobsetptr->cob_trace_file != stderr) {
+	if (cobsetptr->cob_trace_file
+	 && cobsetptr->cob_trace_file != stderr
+	 && !cobsetptr->external_trace_file	/* note: may include stdout */) {
 		fclose (cobsetptr->cob_trace_file);
-		cobsetptr->cob_trace_file = NULL;
 	}
+	cobsetptr->cob_trace_file = NULL;
 
 	cob_exit_screen ();
 	cob_exit_fileio ();
@@ -544,15 +559,7 @@ cob_terminate_routines (void)
 	cob_exit_common_modules ();
 	cob_exit_call ();
 	cob_exit_reportio ();
-
-	if (cobsetptr->cob_dump_file 
-	 && cobsetptr->cob_dump_file != stderr) {
-		fclose (cobsetptr->cob_dump_file);
-		cobsetptr->cob_dump_file = NULL;
-	}
-
 	cob_exit_common ();
-
 }
 
 /* reentrant version of strerror */
@@ -1249,32 +1256,41 @@ cob_memcpy (cob_field *dst, const void *src, const size_t size)
 	cob_move (&temp, dst);
 }
 
+/* open file using mode according to cob_unix_lf and
+   filename (append when starting with +) */
+static FILE *
+cob_open_logfile (const char *filename)
+{
+	const char *mode;
+
+	if (!cobsetptr->cob_unix_lf) {
+		if (*filename == '+') {
+			filename++;
+			mode = "a";
+		} else {
+			mode = "w";
+		}
+	} else {
+		if (*filename == '+') {
+			filename++;
+			mode = "ab";
+		} else {
+			mode = "wb";
+		}
+	}
+	return fopen (filename, mode);
+}
+
+/* ensure that cob_trace_file is available for writing */
 static void
 cob_check_trace_file (void)
 {
-	const char *filename = cobsetptr->cob_trace_filename;
-	const char *mode;
 
 	if (cobsetptr->cob_trace_file) {
 		return;
 	}
 	if (cobsetptr->cob_trace_filename) {
-		if (!cobsetptr->cob_unix_lf) {
-			if (*filename == '+') {
-				filename++;
-				mode = "a";
-			} else {
-				mode = "w";
-			}
-		} else {
-			if (*filename == '+') {
-				filename++;
-				mode = "ab";
-			} else {
-				mode = "wb";
-			}
-		}
-		cobsetptr->cob_trace_file = fopen (filename, mode);
+		cobsetptr->cob_trace_file = cob_open_logfile (cobsetptr->cob_trace_filename);
 		if (!cobsetptr->cob_trace_file) {
 			cobsetptr->cob_trace_file = stderr;
 		}
@@ -5523,7 +5539,7 @@ get_config_val (char *value, int pos, char *orgvalue)
 	} else if((data_type & ENV_FILE)) {	/* File/path stored as a string */
 		memcpy(&str,data,sizeof(char *));
 		if(data_loc == offsetof(cob_settings,cob_display_print_file)
-		&& cobsetptr->external_display_print_file) 
+		&& cobsetptr->cob_display_print_file) 
 			strcpy(value,"set by cob_set_runtime_option");
 		else
 		if(data_loc == offsetof(cob_settings,cob_trace_filename)
@@ -6402,6 +6418,15 @@ cob_init (const int argc, char **argv)
 		cob_stop_run (1);
 	}
 
+	/* Internal Debug Log */
+	if (cobsetptr->cob_debug_log) {
+#ifndef COB_DEBUG_LOG
+		cob_runtime_warning (_("compiler was not built with --enable-debug-log; COB_DEBUG_LOG ignored"));
+#else
+		cob_debug_open ();
+#endif
+	}
+
 	/* Call inits with cobsetptr to get the adresses of all */
 	/* Screen-IO might be needed for error outputs */
 	cob_init_screenio(cobglobptr, cobsetptr);
@@ -6422,23 +6447,12 @@ cob_init (const int argc, char **argv)
 		sprintf (runtime_err_str, "COB_SWITCH_%d", i);
 		s = getenv (runtime_err_str);
 		if (s && (*s == '1' || strcasecmp (s, "ON") == 0)) {
-				cob_switch[i] = 1;
+			cob_switch[i] = 1;
 		} else {
-				cob_switch[i] = 0;
-			}
+			cob_switch[i] = 0;
 		}
-
-
-	/* DebugLog file */
-	s = getenv ("COB_DEBUG_LOG");
-	if (s) {
-#ifdef COB_DEBUG_LOG
-		cob_debug_env = (const char*) cob_save_env_value((char*) cob_debug_env, s);
-		cob_debug_open(cob_debug_env);
-#else
-		cob_runtime_warning (_("compiler was not built with --enable-debug-log; COB_DEBUG_LOG ignored"));
-#endif
 	}
+
 	/* Get user name */
 	if (cobsetptr->cob_user_name == NULL || !strcmp(cobsetptr->cob_user_name, "Unknown")) {
 #ifdef	_WIN32
@@ -6578,17 +6592,14 @@ cob_set_runtime_option (enum cob_runtime_option_switch opt, void *p)
 			cobsetptr->external_trace_file = 0;
 		break;
 	case COB_SET_RUNTIME_DISPLAY_PRINTER_FILE:
+		/* note: if set cob_display_print_file is always external */
 		cobsetptr->cob_display_print_file = (FILE *)p;
-		if (p)
-			cobsetptr->external_display_print_file = 1;
-		else
-			cobsetptr->external_display_print_file = 0;
 		break;
 	case COB_SET_RUNTIME_RESCAN_ENV:
 		cob_rescan_env_vals ();
 		break;
 	default:
-		cob_runtime_error (_("%s called with unknown option: %d"),
+		cob_runtime_warning (_("%s called with unknown option: %d"),
 			"cob_set_runtime_option", opt);
 	}
 	return;
@@ -6723,94 +6734,143 @@ cob_alloc_attr(int type, int digits, int scale, int flags)
 /* 
  * Env var is  COB_DEBUG_LOG
  * Env Var string is a series of keyword=value parameters where keywords:
- * L=x  - T for trace level, W for warnings, N for normal, A for ALL
- * M=yy - rw for report writer, the 2 char code is tabled and compared
+ * L=x  - options: T for trace level, W for warnings, N for normal, A for ALL
+ * M=yy - module:  RW for report writer, the 2 char code is tabled and compared
  *        with the value coded on DEBUG_LOG("yy",("format",args));
- * O=path/file - file name to write log data to. A ## is replaced by process id
- *        default is  cob_debug_log.##
+ * O=path/file - file name to write log data to, default is: cob_debug_log.$$
+ *        note:  replacements already done in common setting handling
  */
-int
-cob_debug_open(const char *debug_env)
+void
+cob_debug_open (void)
 {
-	int		i,j;
-	char	val[256],logfile[256];
-	if(debug_env == NULL)
-		return 0;
-	strcpy(logfile,"cob_debug_log.##");
-	for(i=0; debug_env[i] != 0; i++) {
-		if(debug_env[i] == ','
-		|| debug_env[i] == ';')
+	char	*debug_env = cobsetptr->cob_debug_log;
+	int		i, j;
+	char	module_name[4];
+	char	log_opt;
+	char	logfile[COB_SMALL_BUFF];
+
+	logfile[0] = 0;
+
+	for (i=0; debug_env[i] != 0; i++) {
+		/* skip separator */
+		if (debug_env[i] == ','
+		 || debug_env[i] == ';')
 			continue;
-		if(debug_env[i+1] == '=') {
-			if(toupper(debug_env[i]) == 'M') {
-				for(j=0,i+=2; debug_env[i] != ',' && debug_env[i] != ';' && debug_env[i] != 0 && j < 4; i++)
-					val[j++] = debug_env[i];
-				val[j] = 0;
-				for(j=0; cob_debug_modules[j][0] > ' '; j++);
-				if(j < 12)
-					strcpy(cob_debug_modules[j],val);
-			} else if(toupper(debug_env[i]) == 'L') {
-				for(j=0,i+=2; debug_env[i] != ',' && debug_env[i] != ';' && debug_env[i] != 0 && j < 4; i++)
-					val[j++] = debug_env[i];
-				val[j] = 0;
-				if(toupper(val[0]) == 'T')
-					cob_debug_log_time = cob_debug_level = 3;
-				else if(toupper(val[0]) == 'W')
-					cob_debug_level = 2;
-				else if(toupper(val[0]) == 'N')
-					cob_debug_level = 0;
-				else if(toupper(val[0]) == 'A')
-					cob_debug_level = 9;
 
-			} else if(toupper(debug_env[i]) == 'O') {
-				for(j=0,i+=2; debug_env[i] != ',' && debug_env[i] != ';' && debug_env[i] != 0 && j < 240; i++)
-					val[j++] = debug_env[i];
-				val[j] = 0;
-				strcpy(logfile,val);
-			} else {
-				/* Unknown x=, Just ignore it for now */
-			}
-			if(debug_env[i] == 0) i--;
-		}
-	}
-	strcpy(val,logfile);
-	for(i=j=0; val[i] != 0; ) {
-		if(memcmp(&val[i],"##",2) == 0
-		|| memcmp(&val[i],"++",2) == 0
-		|| memcmp(&val[i],"$$",2) == 0
-		|| memcmp(&val[i],"%%",2) == 0) {
-			j += sprintf(&logfile[j],"%d",cob_sys_getpid());
+		/* debugging flags (not include in file name) */
+		if (debug_env[i + 1] == '=') {
+			log_opt = toupper (debug_env[i]);
 			i += 2;
+
+			switch (log_opt) {
+
+			case 'M':	/* module to debug */
+				for (j = 0; j < 4; i++) {
+					if (debug_env[i] == ','
+					 || debug_env[i] == ';'
+					 || debug_env[i] == 0) {
+						break;
+					}
+					module_name[j++] = debug_env[i];
+				}
+				module_name[j] = 0;
+				/* note: special module ALL is checked later */
+				for (j = 0; j < 12 && cob_debug_modules[j][0] > ' '; j++) {
+					if (strcasecmp (cob_debug_modules[j], module_name) == 0) {
+						break;
+					}
+				}
+				if (j < 12 && cob_debug_modules[j][0] == ' ') {
+					strcpy (cob_debug_modules[j], module_name);
+				}
+				if (debug_env[i] == 0) i--;
+				break;
+
+			case 'L':	/* logging options */
+				log_opt = toupper (debug_env[i]);
+				switch (log_opt) {
+				case 'T':	/* trace */
+					cob_debug_log_time = cob_debug_level = 3;
+					break;
+				case 'W':	/* warnings */
+					cob_debug_level = 2;
+					break;
+				case 'N':	/* normal */
+					cob_debug_level = 0;
+					break;
+				case 'A':	/* all */
+					cob_debug_level = 9;
+					break;
+				default:	/* Unknown log option, just ignored for now */
+					i--;
+					break;
+				}
+				break;
+
+			case 'O':	/* output name for logfile */
+				for (j = 0; j < COB_SMALL_MAX; i++) {
+					if (debug_env[i] == ','
+					 || debug_env[i] == ';'
+					 || debug_env[i] == 0) {
+						break;
+					}
+					logfile[j++] = debug_env[i];
+				}
+				logfile[j] = 0;
+				if (debug_env[i] == 0) i--;
+				break;
+
+			default:	/* Unknown x=, just ignored for now */
+				break;
+			}
 		} else {
-			logfile[j++] = val[i++];
+			/* invalid character, just ignored for now */
+			/* note: this allows for L=WARNING (but also for L=WUMPUS) */
 		}
 	}
-	logfile[j] = 0;
-	cob_debug_file = fopen(logfile,"w");
-	if(cob_debug_file == NULL) {
-		cob_runtime_error (_("Error '%s opening COB_DEBUG_LOG '%s'"),strerror(errno),debug_env);
-		return 0;
-	}
-	cob_debug_file_name = cob_strdup(logfile);
-	return 1;
-}
 
+	/* set default logfile if not given */
+	if (logfile[0] == 0) {
+		sprintf (logfile, "cob_debug_log.%d", cob_sys_getpid());
+	}
+	/* store filename for possible unlink (empty log file) */
+	cob_debug_file_name = cob_strdup (logfile);
+
+	/* ensure trace file is open if we use this as debug log and exit */
+	if (cobsetptr->cob_trace_filename &&
+		strcmp (cobsetptr->cob_trace_filename, cob_debug_file_name) == 0) {
+		cob_check_trace_file ();
+		cob_debug_file = cobsetptr->cob_trace_file;
+		return;
+	}
+
+	/* open logfile */
+	cob_debug_file = cob_open_logfile (cob_debug_file_name);
+	if (cob_debug_file == NULL) {
+		/* developer-only msg - not translated */
+		cob_runtime_error ("error '%s' opening COB_DEBUG_LOG '%s', resolved from '%s'",
+			cob_get_strerror (), cob_debug_file_name, cobsetptr->cob_debug_log);
+		return;
+	}
+}
 
 /* Determine if DEBUGLOG is to be allowed */
 int
-cob_debug_logit(int level, char *module)
+cob_debug_logit (int level, char *module)
 {
 	int	i;
-	if(cob_debug_file == NULL)
+	if (cob_debug_file == NULL) {
 		return 1;
-	if(level > cob_debug_level) 
+	}
+	if (level > cob_debug_level) {
 		return 1;
-	for(i=0; i < 12 && cob_debug_modules[i][0] > ' '; i++) {
-		if(strcasecmp("ALL",cob_debug_modules[i]) == 0) {
+	}
+	for (i=0; i < 12 && cob_debug_modules[i][0] > ' '; i++) {
+		if (strcasecmp ("ALL", cob_debug_modules[i]) == 0) {
 			cob_debug_mod = (char*)module;
 			return 0;						/* Logging is allowed */
 		}
-		if(strcasecmp(module,cob_debug_modules[i]) == 0) {
+		if (strcasecmp (module,cob_debug_modules[i]) == 0) {
 			cob_debug_mod = (char*)&cob_debug_modules[i];
 			return 0;						/* Logging is allowed */
 		}
@@ -6820,36 +6880,39 @@ cob_debug_logit(int level, char *module)
 
 /* Write logging line */
 static int cob_debug_hdr = 1;
-static int cob_debug_prv_line = 0;
+static unsigned int cob_debug_prv_line = 0;
 int
-cob_debug_logger(const char *fmt, ...)
+cob_debug_logger (const char *fmt, ...)
 {
 	va_list		ap;
 	int		ln;
 	struct cob_time time;
 
-	if(cob_debug_file == NULL) 
+	if (cob_debug_file == NULL) {
 		return 0;
-	if(*fmt == '~') {			/* Force line# out again to log file */
+	}
+	if (*fmt == '~') {			/* Force line# out again to log file */
 		fmt++;
 		cob_debug_prv_line = -1;
 		cob_debug_hdr = 1;
 	}
-	if(cob_debug_hdr) {
-		if(cob_debug_log_time) {
+	if (cob_debug_hdr) {
+		if (cob_debug_log_time) {
 			time = cob_get_current_date_and_time ();
-			fprintf(cob_debug_file,"%02d:%02d:%02d.%02d ", time.hour, time.minute,
+			fprintf (cob_debug_file, "%02d:%02d:%02d.%02d ", time.hour, time.minute,
 							time.second, time.nanosecond / 10000000);
-		}     
-		if(cob_debug_mod)
-			fprintf(cob_debug_file,"%-3s:",cob_debug_mod);
-		if(cob_source_file)
-			fprintf(cob_debug_file," %s :",cob_source_file);
-		if(cob_source_line && cob_source_line != cob_debug_prv_line) {
-			fprintf(cob_debug_file,"%5d : ",cob_source_line);
+		}
+		if (cob_debug_mod) {
+			fprintf (cob_debug_file, "%-3s:", cob_debug_mod);
+		}
+		if (cob_source_file) {
+			fprintf (cob_debug_file, " %s :", cob_source_file);
+		}
+		if (cob_source_line && cob_source_line != cob_debug_prv_line) {
+			fprintf (cob_debug_file, "%5d : ", cob_source_line);
 			cob_debug_prv_line = cob_source_line;
 		} else {
-			fprintf(cob_debug_file,"%5s : "," ");
+			fprintf (cob_debug_file, "%5s : ", " ");
 		}
 		cob_debug_hdr = 0;
 	}
@@ -6857,9 +6920,9 @@ cob_debug_logger(const char *fmt, ...)
 	vfprintf (cob_debug_file, fmt, ap);
 	va_end (ap);
 	ln = strlen(fmt);
-	if(fmt[ln-1] == '\n') {
+	if (fmt[ln-1] == '\n') {
 		cob_debug_hdr = 1;
-		fflush(cob_debug_file);
+		fflush (cob_debug_file);
 	}
 	return 0;
 }
@@ -6879,7 +6942,7 @@ repeatWord(
 
 /* Hexdump of memory */
 int
-cob_debug_dump(void *pMem, int len)
+cob_debug_dump (void *pMem, int len)
 {
 #define dMaxPerLine	24
 #define dMaxHex ((dMaxPerLine*2)+(dMaxPerLine/4-1))
@@ -6893,7 +6956,7 @@ cob_debug_dump(void *pMem, int len)
 		return 0;
 	memset(lastWord,0xFD, 4);
 	for(i=0; i < len; ) {
-        for(j=k=0; j < dMaxPerLine && (i+j) < len; j++) {
+		for(j=k=0; j < dMaxPerLine && (i+j) < len; j++) {
 			k += sprintf(&hex[k],"%02X",mem[i+j]&0xFF);
 			if( (j % 4) == 3 )
 				hex[k++] = ' ';
@@ -6909,21 +6972,21 @@ cob_debug_dump(void *pMem, int len)
 		}
 		chr[k++] = 0;
 
-		fprintf(cob_debug_file," %6.6X : %-*s '%s'\n",adrs+i,dMaxHex,hex,chr);
-		if ( (i + dMaxPerLine) < len )
+		fprintf (cob_debug_file," %6.6X : %-*s '%s'\n",adrs+i,dMaxHex,hex,chr);
+		if ((i + dMaxPerLine) < len )
 			memcpy( (char *)lastWord, (char *)&mem[i+dMaxPerLine-4], j<4?j:4);
 		i += dMaxPerLine;
 		if( (i + (16*2)) < len
-		&& repeatWord( lastWord, &mem[i])
-		&& repeatWord( lastWord, &mem[i+dMaxPerLine])) {
-		    fprintf(cob_debug_file," %6.6X : ",adrs+i);
-			while(i < len-16
+		&& repeatWord (lastWord, &mem[i])
+		&& repeatWord (lastWord, &mem[i+dMaxPerLine])) {
+			fprintf (cob_debug_file," %6.6X : ",adrs+i);
+			while (i < len - 16
 			&& repeatWord(lastWord,&mem[i]))
 				i += 16;
-			fprintf(cob_debug_file," thru %6.6X same as last word\n",adrs+i-1);
+			fprintf (cob_debug_file," thru %6.6X same as last word\n",adrs+i-1);
 		}
 	}
-	fflush(cob_debug_file);
+	fflush (cob_debug_file);
 
 	return 0;
 }
